add angular as external lib

--- a/helloangular/app.css
+++ b/helloangular/app.css
@@ -1,5 +1,10 @@
 /* app css stylesheet */
 
+#lbl {
+    color: blue;
+    background-color: transparent;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
