--- a/repositorynook-ui/reponook-app/src/app/app.component.html
+++ b/repositorynook-ui/reponook-app/src/app/app.component.html
@@ -10,17 +10,22 @@
   <button mat-menu-item> Help </button>
 </mat-menu>
 
-<mat-sidenav-container > <!--class="example-container"-->
+<mat-sidenav-container class="example-container"> <!---->
   
-  <mat-sidenav #sidenav > <!--class="example-sidenav"-->
-    <mat-list >
-        <!-- <mat-list-item class="list-item" *ngFor="let source of mSources" (click)="searchArticles(source.id);sidenav.close();">  -->
-          <mat-list-item class="list-item" (click)="sidenav.close();">
-            <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/mongodb.png)'}" class="example-header-image"></div>
-            <span class="source-name">Source Name</span> <!--{{source.name}}-->
-          </mat-list-item>
-    </mat-list>
-  </mat-sidenav>
+  <!-- <mat-sidenav #sidenav class="example-sidenav"> -->
+    <mat-sidenav #sidenav [mode]='side'
+    [fixedInViewport]="true"
+    [opened]="true"
+      fixedTopGap="64">
+      <mat-nav-list>
+        <a mat-list-item>LeftNav Item1</a>
+        <mat-list-item class="list-item" (click)="sidenav.close();">
+          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/mongodb.png)'}" class="example-header-image"></div>
+          <span class="source-name">Source Name</span> 
+        </mat-list-item>
+      </mat-nav-list>
+
+    </mat-sidenav>
   
   <mat-card class="example-card"  *ngFor="let article of mArticles">
     <mat-card-header>
@@ -41,6 +46,4 @@
       <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> View</a>
     </mat-card-actions>
   </mat-card>
-
 </mat-sidenav-container>
-<button mat-button (click)="test()" ><mat-icon>menu</mat-icon></button> <!--sidenav.open()-->
