--- a/repositorynook-ui/reponook-app/src/app/app.component.html
+++ b/repositorynook-ui/reponook-app/src/app/app.component.html
@@ -1,49 +1,31 @@
-<mat-toolbar color="primary">
-  <button mat-button (click)="sidenav.toggle()" ><mat-icon>menu</mat-icon></button> <!-- sidenav.open()-->
-  <span>RepositoryNook UI</span>  
-  <span class="example-spacer"></span>
-  <button mat-button [matMenuTriggerFor]="appMenu"><mat-icon>settings</mat-icon></button>
-</mat-toolbar>
+<div>
+  <mat-toolbar color="primary">
+    <button mat-button (click)="sidenav.toggle()" ><mat-icon>menu</mat-icon></button>
+    <span>RepositoryNook UI</span>  
+    <span class="example-spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="moreMenu" aria-label="Settings">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+  </mat-toolbar>
 
-<mat-menu #appMenu="matMenu">
-  <button mat-menu-item> Settings </button>
-  <button mat-menu-item> Help </button>
-</mat-menu>
-
-<mat-sidenav-container class="example-container"> <!---->
-  
-  <!-- <mat-sidenav #sidenav class="example-sidenav"> -->
-    <mat-sidenav #sidenav [mode]='side'
-    [fixedInViewport]="true"
-    [opened]="true"
-      fixedTopGap="64">
+  <mat-menu #moreMenu="matMenu">
+    <a mat-menu-item [routerLink]="popupItems[0].path"><mat-icon>settings</mat-icon>Settings</a>
+    <button mat-menu-item>
+      <mat-icon>help</mat-icon>Help
+    </button>
+  </mat-menu>
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #sidenav 
+                 mode="side" 
+                 [fixedInViewport]="true" 
+                 [opened]="true"
+                 fixedTopGap="64">
       <mat-nav-list>
-        <a mat-list-item>LeftNav Item1</a>
-        <mat-list-item class="list-item" (click)="sidenav.close();">
-          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/mongodb.png)'}" class="example-header-image"></div>
-          <span class="source-name">Source Name</span> 
-        </mat-list-item>
+          <a mat-list-item routerLink="{{nav.path}}" routerLinkActive="active" *ngFor="let nav of navItems">{{nav.title}}</a>
       </mat-nav-list>
-
-    </mat-sidenav>
-  
-  <mat-card class="example-card"  *ngFor="let article of mArticles">
-    <mat-card-header>
-      <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}" class="example-header-image"></div>
-      <mat-card-title class="title">{{article.title}}</mat-card-title>
-      <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
-    <mat-card-content>
-      <p>
-        {{article.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions class="action-buttons">
-      <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
-      <button mat-button color="primary"><mat-icon>comment</mat-icon> Comments</button>
-      <button mat-button color="primary"><mat-icon>share</mat-icon> Share</button>
-      <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> View</a>
-    </mat-card-actions>
-  </mat-card>
-</mat-sidenav-container>
+    </mat-sidenav>  
+    <mat-sidenav-content class="main-content-container">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
