--- a/repositorynook-ui/reponook-app/src/app/app.component.scss
+++ b/repositorynook-ui/reponook-app/src/app/app.component.scss
@@ -1,52 +1,13 @@
-@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
-
+.sidenav-container {
+    position: fixed;
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    min-width: 100%;
+}
+.main-content-container {
+    padding: 8px;
+}
 .example-spacer {
     flex: 1 1 auto;
-  }
-  
-  .example-card{
-      margin-top: 4px;
-  }
-  
-  .example-header-image { 
-    background-size: cover;
-  }
-  
-  .title{
-      font-weight: bold;
-  }
-  
-  .img-article{
-      height: 350px;
-  }
-  
-  .action-buttons{
-      text-align: center;
-  }
-      
-  .example-container {
-      width: 100%;
-      height: auto;
-      border: 1px solid rgba(111, 111, 111, 0.50);
-  }
-    
-  .example-sidenav-content {
-      display: flex;
-      height: 75%;
-      align-items: center;
-      justify-content: center;
-  }
-    
-  .example-sidenav {
-      padding: 20px;
-  }
-  
-  .source-name {
-      margin-left:5px; 
-  }
-  
-  .list-item:hover{
-      cursor: pointer;
-      background-color: #3f51b5;
-      color: white;
-  }
+}
